trunk/Archive2/ef/57d4105e8b0b39/output
clang version 3.6.0 (tags/RELEASE_360/final 235480)
Target: x86_64-unknown-linux-gnu
Thread model: posix
g++ (GCC) 5.2.0
Copyright (C) 2015 Free Software Foundation, Inc.
This is free software; see the source for copying conditions.  There is NO
warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

main.cpp: In function 'int main()':
main.cpp:6:9: error: invalid declaration of member template in local class
         template<class T>
         ^
main.cpp:10:5: error: 'test' is not a member of 'main()::foo'
     foo::test<int> x;
     ^
main.cpp:10:15: error: expected primary-expression before 'int'
     foo::test<int> x;
               ^
main.cpp:11:12: error: 'x' was not declared in this scope
     (void) x;
            ^
