trunk/Archive2/ef/57d4105e8b0b39/main.cpp
#include <vector>

int main()
{
    struct foo {
        template<class T>
        using test = std::vector<T>;
    };
    
    foo::test<int> x;
    (void) x;
    return 0;
}